--- a/NJPF/css/indexa340.css
+++ b/NJPF/css/indexa340.css
@@ -1,6 +1,6 @@
 :root {
-  --background-color: linear-gradient(184deg, rgba(241,97,6,1) 0%, rgba(237,92,0,1) 100%);
-  --text-color: #ed5c00;
+    --background-color: linear-gradient(184deg, rgb(60 17 124) 0%, rgb(61 16 124) 100%);
+    --text-color: #3c117c;
 }
 
 
